--- a/src/pages/projects/styles/projectItem.css
+++ b/src/pages/projects/styles/projectItem.css
@@ -99,6 +99,6 @@
   margin: 5px 10px 5px 10px;
 }
 
-.download {
+.redirect {
   margin: 5px 10px 5px 10px;
 }
